# chatty-mini

./: .gitattributes  .gitignore  GLOSSARY.md  README.md  pubspec.yaml
android/: key.properties.template
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  llama_engine_stub.cpp
android/app/src/main/kotlin/io/instance001/chatmini/: CloudKeyBridge.kt  MainActivity.kt  (+4 more)
android/app/src/main/res/drawable-v21/: launch_background.xml
android/app/src/main/res/values-night-v31/: styles.xml
android/app/src/main/res/values-v31/: styles.xml
docs/: USER_MANUAL.md
lib/: main.dart
lib/app/: app_shell.dart  theme.dart
lib/core/inference/: cloud_inference_service.dart  cloud_key_service.dart  inference_controller.dart  inference_models.dart  inference_presets.dart  inference_service.dart
lib/core/runtime/: runtime_controller.dart  runtime_models.dart  runtime_service.dart
lib/core/storage/: app_storage.dart  model_import_service.dart
lib/features/character/: character_controller.dart  character_tray.dart
lib/features/chat/: chat_models.dart  chat_screen.dart
lib/features/help/: help_sheet.dart
lib/features/memory/: memory_controller.dart  memory_models.dart  memory_tray.dart
lib/features/models/: model_controller.dart  model_models.dart  model_sheet.dart
lib/features/sandbox/: sandbox_controller.dart  sandbox_models.dart  sandbox_tray.dart
lib/features/settings/: settings_controller.dart  settings_sheet.dart
lib/features/startup/: startup_splash_screen.dart
test/: widget_test.dart
